--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "browserify": "^5.10.0",
     "gulp": "^3.8.8",
     "gulp-rename": "^1.2.0",
-    "gulp-sass": "^0.7.2",
+    "gulp-sass": "^1.3.x",
     "run-sequence": "^0.3.6",
     "gulp-uglify": "^1.0.1",
     "vinyl-source-stream": "^0.1.1",
