--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "gulp-uglify": "^1.0.1",
     "vinyl-source-stream": "^0.1.1",
     "gulp-util": "^3.0.1",
-    "watchify": "^1.0.2",
-    "reactify": "^0.14.0",
+    "watchify": "^2.4.x",
+    "reactify": "^1.0.x",
     "gulp-if": "^1.2.4",
     "gulp-imagemin": "^2.0.0",
     "gulp-notify": "^1.6.0",
