--- a/package.json
+++ b/package.json
@@ -19,31 +19,32 @@
     "node": ">=0.10.26"
   },
   "devDependencies": {
+    "browser-sync": "^2.2.2",
     "browserify": "^5.10.0",
+    "del": "^0.1.3",
+    "express": "^4.12.2",
     "gulp": "^3.8.8",
-    "gulp-rename": "^1.2.0",
-    "gulp-sass": "^1.3.x",
-    "run-sequence": "^0.3.6",
-    "gulp-uglify": "^1.0.1",
-    "vinyl-source-stream": "^0.1.1",
-    "gulp-util": "^3.0.1",
-    "watchify": "^2.4.x",
-    "reactify": "^1.0.x",
+    "gulp-autoprefixer": "^2.1.0",
     "gulp-if": "^1.2.4",
     "gulp-imagemin": "^2.0.0",
     "gulp-notify": "^1.6.0",
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^1.3.x",
+    "gulp-sourcemaps": "^1.5.0",
     "gulp-streamify": "0.0.5",
+    "gulp-uglify": "^1.0.1",
+    "gulp-util": "^3.0.1",
+    "humps": "^0.4.2",
+    "lodash": "^3.3.1",
+    "morgan": "^1.5.1",
     "react": "^0.12.x",
     "react-router": "^0.11.x",
-    "del": "^0.1.3",
-    "morgan": "^1.5.1",
-    "express": "^4.12.2",
-    "browser-sync": "^2.2.2",
-    "gulp-autoprefixer": "^2.1.0",
-    "humps": "^0.4.2",
-    "when": "^3.7.2",
+    "reactify": "^1.0.x",
     "reflux": "^0.2.5",
+    "run-sequence": "^0.3.6",
     "superagent": "^0.21.0",
-    "lodash": "^3.3.1"
+    "vinyl-source-stream": "^0.1.1",
+    "watchify": "^2.4.x",
+    "when": "^3.7.2"
   }
 }
