--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lodash": "^3.3.1",
     "morgan": "^1.5.1",
     "react": "^0.12.x",
+    "react-document-title": "^1.0.2",
     "react-router": "^0.11.x",
     "reflux": "^0.2.5",
     "run-sequence": "^0.3.6",
