update dependencies and corresponding logic. convert to es6 syntax/features

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "react-browserify-gulp-boilerplate",
-  "version": "0.1.0",
+  "name": "react-rocket-boilerplate",
+  "version": "0.2.0",
   "author": "Jake Marsh <jakemmarsh@gmail.com>",
   "description": "Boilerplate using React, Browserify, SASS, and Gulp.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jakemmarsh/react-browserify-gulp-boilerplate.git"
+    "url": "https://github.com/jakemmarsh/react-rocket-boilerplate.git"
   },
   "keywords": [
     "gulp",
@@ -16,37 +16,37 @@
   ],
   "private": true,
   "engines": {
-    "node": ">=0.10.26"
+    "node": "^0.12.x",
+    "npm": "^2.1.x"
   },
   "devDependencies": {
-    "babelify": "^5.0.4",
-    "browser-sync": "^2.2.2",
-    "browserify": "^5.10.0",
-    "debowerify": "^1.2.0",
-    "del": "^0.1.3",
-    "express": "^4.12.2",
-    "gulp": "^3.8.8",
-    "gulp-autoprefixer": "^2.1.0",
-    "gulp-if": "^1.2.4",
-    "gulp-imagemin": "^2.0.0",
-    "gulp-notify": "^1.6.0",
-    "gulp-rename": "^1.2.0",
-    "gulp-sass": "^1.3.x",
-    "gulp-sourcemaps": "^1.5.0",
+    "babelify": "^6.1.x",
+    "browser-sync": "^2.7.13",
+    "browserify": "^10.2.6",
+    "debowerify": "^1.3.1",
+    "del": "^1.2.0",
+    "express": "^4.13.1",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^2.3.1",
+    "gulp-if": "^1.2.5",
+    "gulp-imagemin": "^2.3.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.0.x",
+    "gulp-sourcemaps": "^1.5.2",
     "gulp-streamify": "0.0.5",
-    "gulp-uglify": "^1.0.1",
-    "gulp-util": "^3.0.1",
-    "humps": "^0.4.2",
-    "lodash": "^3.3.1",
-    "morgan": "^1.5.1",
-    "react": "^0.12.x",
+    "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.6",
+    "humps": "^0.6.0",
+    "lodash": "^3.10.0",
+    "morgan": "^1.6.1",
+    "react": "^0.13.x",
     "react-document-title": "^1.0.2",
-    "react-router": "^0.11.x",
-    "reflux": "^0.2.5",
-    "run-sequence": "^0.3.6",
-    "superagent": "^0.21.0",
-    "vinyl-source-stream": "^0.1.1",
-    "watchify": "^2.4.x",
-    "when": "^3.7.2"
+    "react-router": "^0.13.x",
+    "reflux": "^0.2.9",
+    "run-sequence": "^1.1.1",
+    "superagent": "^1.2.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.2.x"
   }
 }
