--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "morgan": "^1.6.1",
     "react": "^0.13.x",
     "react-document-title": "^1.0.2",
-    "react-router": "^0.13.x",
+    "react-router": "^1.0.0-rc1",
     "reflux": "^0.2.9",
     "run-sequence": "^1.1.1",
     "superagent": "^1.2.0",
