--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "gulp-autoprefixer": "^2.3.1",
     "gulp-if": "^1.2.5",
     "gulp-imagemin": "^2.3.0",
+    "gulp-nodemon": "^2.0.4",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.x",
