--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "object-assign": "^4.0.1",
     "passport": "^0.3.0",
     "passport-google-oauth": "^0.2.0",
+    "react-fastclick": "^1.0.3",
     "react-medium-editor": "^1.3.2",
     "react-router": "^1.0.0-rc1",
     "serve-favicon": "~2.3.0"
