--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "npm": "^2.1.x"
   },
   "dependencies": {
+    "async": "^1.3.0",
     "axios": "^0.5.4",
     "body-parser": "~1.13.2",
     "classnames": "^2.1.3",
@@ -30,7 +31,7 @@
     "flux": "^2.1.1",
     "jade": "~1.11.0",
     "medium-editor": "^5.8.1",
-    "mongoose": "^4.1.7",
+    "mongoose": "^4.1.8",
     "mongoose-findorcreate": "^0.1.2",
     "object-assign": "^4.0.1",
     "passport": "^0.3.0",
@@ -60,14 +61,17 @@
     "gulp-util": "^3.0.6",
     "humps": "^0.6.0",
     "lodash": "^3.10.0",
+    "mockgoose": "^4.0.1",
     "morgan": "^1.6.1",
+    "passport-stub": "^1.0.1",
     "react": "^0.13.x",
     "react-document-title": "^1.0.2",
-    "react-router": "^1.0.0-rc1",
     "reflux": "^0.2.9",
     "run-sequence": "^1.1.1",
     "sassify": "^0.9.1",
+    "should": "^7.0.1",
     "superagent": "^1.2.0",
+    "supertest": "^1.0.1",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.2.x"
   }
