--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-fastclick": "^1.0.3",
     "react-medium-editor": "^1.3.2",
     "react-router": "^1.0.0-rc1",
+    "react-timer-mixin": "^0.13.3",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
