--- a/package.json
+++ b/package.json
@@ -39,9 +39,10 @@
     "passport": "^0.3.0",
     "passport-google-oauth": "^0.2.0",
     "q": "^1.4.1",
+    "react-bootstrap": "^0.26.1",
     "react-fastclick": "^1.0.3",
     "react-medium-editor": "^1.3.2",
-    "react-router": "^1.0.0-rc1",
+    "react-router": "1.0.0-rc1",
     "react-timer-mixin": "^0.13.3",
     "serve-favicon": "~2.3.0"
   },
