--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-medium-editor": "^1.3.2",
     "react-router": "1.0.0-rc1",
     "react-timer-mixin": "^0.13.3",
+    "reflux": "^0.3.0",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
@@ -57,6 +58,7 @@
     "gulp-autoprefixer": "^2.3.1",
     "gulp-if": "^1.2.5",
     "gulp-imagemin": "^2.3.0",
+    "gulp-jscs": "^3.0.1",
     "gulp-nodemon": "^2.0.4",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
