--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "sass",
     "boilerplate"
   ],
+  "scripts": {
+    "test": "karma start"
+  },
   "private": true,
   "engines": {
     "node": "^0.12.x",
@@ -50,8 +53,11 @@
   },
   "devDependencies": {
     "babelify": "^6.1.x",
+    "brfs": "^1.4.0",
     "browser-sync": "^2.7.13",
-    "browserify": "^10.2.6",
+    "browserify": "^12.0.1",
+    "chai": "^3.4.0",
+    "chai-jquery": "^2.0.0",
     "debowerify": "^1.3.1",
     "del": "^1.2.0",
     "express": "^4.13.1",
@@ -69,10 +75,22 @@
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
     "humps": "^0.6.0",
+    "karma": "^0.13.7",
+    "karma-browserify": "^4.2.0",
+    "karma-chai": "^0.1.0",
+    "karma-chai-jquery": "^1.0.0",
+    "karma-chrome-launcher": "^0.2.1",
+    "karma-jquery": "^0.1.0",
+    "karma-mocha": "^0.2.0",
+    "karma-phantomjs-launcher": "^0.1.4",
     "lodash": "^3.10.0",
+    "mocha": "^2.3.3",
     "morgan": "^1.6.1",
     "passport-stub": "^1.0.1",
+    "phantomjs": "^1.9.18",
+    "phantomjs-polyfill": "0.0.1",
     "react-document-title": "^1.0.2",
+    "requirejs": "^2.1.20",
     "run-sequence": "^1.1.1",
     "should": "^7.0.1",
     "superagent": "^1.2.0",
