--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "sass",
     "boilerplate"
   ],
-  "scripts": {
-    "test": "karma start"
-  },
+  "install": "npm shrinkwrap",
+  "postuninstall": "npm shrinkwrap",
   "private": true,
   "engines": {
     "node": "^0.12.x",
@@ -41,30 +40,33 @@
     "passport": "^0.3.0",
     "passport-google-oauth": "^0.2.0",
     "q": "^1.4.1",
-    "react": "^0.14.0",
+    "react": "^0.14.6",
     "react-bootstrap": "^0.27.3",
     "react-dom": "^0.14.0",
     "react-medium-editor": "^1.5.0",
-    "react-router": "1.0.0-rc3",
+    "react-router": "^1.0.3",
     "react-timer-mixin": "^0.13.3",
     "reflux": "^0.3.0",
     "sassify": "^0.9.1",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
+    "babel-jest": "^5.3.0",
     "babelify": "^6.1.x",
     "brfs": "^1.4.0",
     "browser-sync": "^2.7.13",
     "browserify": "^12.0.1",
-    "chai": "^3.4.0",
     "chai-jquery": "^2.0.0",
     "debowerify": "^1.3.1",
     "del": "^1.2.0",
+    "expect": "^1.13.0",
     "express": "^4.13.1",
+    "fbjs": "^0.4.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-if": "^1.2.5",
     "gulp-imagemin": "^2.3.0",
+    "gulp-jest": "^0.4.0",
     "gulp-jscs": "^3.0.1",
     "gulp-nodemon": "^2.0.4",
     "gulp-notify": "^2.2.0",
@@ -75,27 +77,25 @@
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
     "humps": "^0.6.0",
+    "jest-cli": "^0.8.0",
     "karma": "^0.13.7",
     "karma-browserify": "^4.2.0",
-    "karma-chai": "^0.1.0",
-    "karma-chai-jquery": "^1.0.0",
     "karma-chrome-launcher": "^0.2.1",
     "karma-jquery": "^0.1.0",
-    "karma-mocha": "^0.2.0",
     "karma-phantomjs-launcher": "^0.1.4",
     "lodash": "^3.10.0",
-    "mocha": "^2.3.3",
     "morgan": "^1.6.1",
     "passport-stub": "^1.0.1",
     "phantomjs": "^1.9.18",
     "phantomjs-polyfill": "0.0.1",
+    "react-addons-test-utils": "^0.14.3",
     "react-document-title": "^1.0.2",
     "requirejs": "^2.1.20",
     "run-sequence": "^1.1.1",
-    "should": "^7.0.1",
     "superagent": "^1.2.0",
     "supertest": "^1.0.1",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.2.x"
+    "watchify": "^3.2.x",
+    "swagger-node-express": "~2.0"
   }
 }
