--- a/package.json
+++ b/package.json
@@ -45,10 +45,13 @@
     "react-dom": "^0.14.0",
     "react-medium-editor": "^1.5.0",
     "react-router": "^1.0.3",
+    "react-scroll": "^1.0.0",
     "react-timer-mixin": "^0.13.3",
+    "react-waypoint": "^1.2.3",
     "reflux": "^0.3.0",
     "sassify": "^0.9.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "smoothscroll": "^0.2.2"
   },
   "devDependencies": {
     "babel-jest": "^5.3.0",
