--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-session": "^1.11.3",
     "flux": "^2.1.1",
     "jade": "~1.11.0",
+    "moment": "^2.11.2",
     "mongoose": "^4.1.8",
     "mongoose-findorcreate": "^0.1.2",
     "object-assign": "^4.0.1",
