--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-bootstrap": "^0.27.3",
     "react-dom": "^0.14.0",
     "react-medium-editor": "^1.5.0",
+    "react-reorder": "^1.3.0",
     "react-router": "^1.0.3",
     "react-scroll": "^1.0.0",
     "react-timer-mixin": "^0.13.3",
